--- a/blog-dashboard/package.json
+++ b/blog-dashboard/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
     "bootstrap": "^5.3.2",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.3"
